# e-commers

./: Dockerfile  Makefile  docker-compose.yaml  pyproject.toml
apps/: admin.py  filters.py  forms.py  paginations.py  serializers.py  urls.py  utils.py  views.py
apps/fixtures/: categories.json  comments.json  like.json  merchant.json  productimage.json  products.json  productversion.json  shop.json  users.json
apps/models/: __init__.py  base.py  carts.py  managers.py  orders.py  products.py  users.py
locale/en/LC_MESSAGES/: django.po
locale/uz/LC_MESSAGES/: django.mo  django.po
root/: settings.py  urls.py
templates/admin/: login.html
