[project]
name = "e-commers"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "django[argon2]>=5.2.7",
    "django-jazzmin>=3.0.1",
    "dotenv>=0.9.9",
    "drf-spectacular>=0.28.0",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "djangorestframework-simplejwt>=5.5.1",
    "django-ckeditor-5>=0.2.18",
    "isort>=7.0.0",
    "flake8>=7.3.0",
    "django-admin-json-editor>=0.2.3",
    "jsoneditor>=1.6.0",
    "django-json-widget>=2.1.0",
    "booktype>=1.5",
    "redis>=5.0.1",
    "django-filter>=25.2",
    "django-mptt>=0.18.0",
]

[tool.isort]
profile = "hug"
skip = "build,.tox,.venv"
src_paths="isort,test"
